[gd_scene load_steps=2 format=3 uid="uid://kmqmxm1dioua"]

[ext_resource type="Script" uid="uid://cu2d6ncr24eja" path="res://Scripts/DefaultPage.gd" id="1_oxy3b"]

[node name="DefaultPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oxy3b")

[node name="Header" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 45.0
grow_horizontal = 2
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = -17.5
offset_right = 249.0
offset_bottom = 17.5
grow_vertical = 2

[node name="Label" type="Label" parent="Header/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "StockMaster"

[node name="MainFrame" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Sidebar" type="ColorRect" parent="MainFrame"]
z_index = -1
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
color = Color(0.721569, 0.792157, 0.831373, 1)

[node name="MarginContainer" type="MarginContainer" parent="MainFrame/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MainFrame/Sidebar/MarginContainer"]
z_index = 1
layout_mode = 2

[node name="EstoqueButton" type="Button" parent="MainFrame/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Estoque
"

[node name="VendasButton" type="Button" parent="MainFrame/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vendas"

[node name="CadastroButton" type="Button" parent="MainFrame/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cadastro
"

[node name="NotificacoesButton" type="Button" parent="MainFrame/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Notificações"

[node name="LogoutButton" type="Button" parent="MainFrame/Sidebar/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Sair
"

[node name="MarginContainer" type="MarginContainer" parent="MainFrame"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 44
theme_override_constants/margin_bottom = 25

[node name="Footer" type="ColorRect" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="Footer"]
layout_direction = 3
layout_mode = 0
offset_left = 2.0
offset_right = 222.0
offset_bottom = 30.0

[node name="Label" type="Label" parent="Footer/HBoxContainer"]
layout_mode = 2
text = "Deformadores de sistemas™"

[connection signal="pressed" from="MainFrame/Sidebar/MarginContainer/VBoxContainer/EstoqueButton" to="." method="_on_estoque_button_pressed"]
[connection signal="pressed" from="MainFrame/Sidebar/MarginContainer/VBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
